--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
       <!-- Masthead -->
       <header class="masthead">
-          <h1>World Chronicles</h1>
+          <h1>Central Terrapin</h1>
       </header>
   
       <!-- Headline -->
