--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+   
     <title>Terrapin Central</title>
     <head>
       <meta charset="UTF-8">
@@ -23,7 +23,7 @@
   
       <!-- Byline -->
       <div id="byline">
-          By Jane Doe
+        By Isabel Kershner
       </div>
   
       <!-- Body Text with Images and Captions -->
